fix: production readiness v2 - Dockerfile PATH fix + full .env.example + path hygiene + resilient CI

--- a/.env.example
+++ b/.env.example
@@ -19,18 +19,30 @@ EVE_BRAIN_HOST_PORT=8080
 ############################
 # Retell outbound brain (required for live calling)
 ############################
-RETELL_API_KEY=
+RETELL_API_KEY=your_retell_api_key_here
 RETELL_FROM_NUMBER=+15555550100
-B2B_AGENT_ID=
+B2B_AGENT_ID=your_b2b_agent_id_here
 B2B_OUTBOUND_AGENT_ID=
 BRAIN_WSS_BASE_URL=wss://voice-agent.evesystems.org/llm-websocket
+
+# Retell agent tuning (sent on WS connect)
+RETELL_AUTO_RECONNECT=true
+RETELL_CALL_DETAILS=true
+RETELL_TRANSCRIPT_WITH_TOOL_CALLS=true
+RETELL_SEND_UPDATE_AGENT_ON_CONNECT=true
+RETELL_RESPONSIVENESS=0.5
+RETELL_INTERRUPTION_SENSITIVITY=0.5
+RETELL_NORMALIZE_FOR_SPEECH=false
+RETELL_REMINDER_TRIGGER_MS=3000
+RETELL_REMINDER_MAX_COUNT=1
 
 ############################
 # LLM provider (production default: Gemini)
 ############################
 BRAIN_USE_LLM_NLG=true
 LLM_PROVIDER=gemini
-GEMINI_API_KEY=
+LLM_PHRASING_FOR_FACTS_ENABLED=false
+GEMINI_API_KEY=your_gemini_api_key_here
 GEMINI_MODEL=gemini-3-flash-preview
 GEMINI_THINKING_LEVEL=minimal
 GEMINI_VERTEXAI=false
@@ -38,11 +50,14 @@ GEMINI_PROJECT=
 GEMINI_LOCATION=global
 
 ############################
-# Optional alternate provider
+# Optional alternate LLM provider (OpenAI)
 ############################
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-5-mini
 OPENAI_REASONING_EFFORT=minimal
+OPENAI_TIMEOUT_MS=8000
+OPENAI_CANARY_ENABLED=false
+OPENAI_CANARY_PERCENT=0
 
 ############################
 # Supabase / n8n funnel integrations
@@ -50,6 +65,7 @@ OPENAI_REASONING_EFFORT=minimal
 SUPABASE_URL=
 SUPABASE_SERVICE_KEY=
 SUPABASE_SCHEMA=public
+SUPABASE_CONNECTION_STRING=
 N8N_LEAD_WEBHOOK_URL=
 N8N_OUTCOME_WEBHOOK_URL=
 N8N_API_KEY=
@@ -68,10 +84,9 @@ TWILIO_API_KEY_SECRET=
 ############################
 # Cloudflare tunnel / verification
 ############################
-CLOUDFLARE_ACCOUNT_ID=
-CLOUDFLARE_EVE_TOC_BUILD_API_TOKEN=
+CLOUDFLARE_ACCOUNT_ID=your_cloudflare_account_id_here
+CLOUDFLARE_EVE_TOC_BUILD_API_TOKEN=your_cloudflare_api_token_here
 CLOUDFLARE_TUNNEL_HOSTNAME=voice-agent.evesystems.org
-# Match this with docker compose host port (EVE_BRAIN_HOST_PORT) or update tunnel ingress.
 CLOUDFLARE_TUNNEL_ORIGIN_PORT=8080
 
 ############################
@@ -92,16 +107,108 @@ WS_QUERY_TOKEN=
 WS_QUERY_TOKEN_PARAM=token
 
 ############################
-# Brain / keepalive / VIC stability defaults
+# WebSocket routing / logging
 ############################
+WEBSOCKET_CANONICAL_ROUTE=llm-websocket
+WEBSOCKET_ENFORCE_CANONICAL_ROUTE=true
+WEBSOCKET_STRUCTURED_LOGGING=false
+
+############################
+# Brain core behavior
+############################
+BRAIN_SPEAK_FIRST=true
+BRAIN_BACKCHANNEL_ENABLED=false
+BRAIN_INBOUND_QUEUE_MAX=256
+BRAIN_OUTBOUND_QUEUE_MAX=256
+BRAIN_TURN_QUEUE_MAX=64
+BRAIN_IDLE_TIMEOUT_MS=5000
 BRAIN_PING_INTERVAL_MS=2000
 KEEPALIVE_PING_WRITE_DEADLINE_MS=100
+
+############################
+# VIC timing / stability thresholds
+############################
 VIC_ACK_DEADLINE_MS=250
 VIC_TOOL_TIMEOUT_MS=1500
 VIC_MODEL_TIMEOUT_MS=3800
-RETELL_SEND_UPDATE_AGENT_ON_CONNECT=true
-RETELL_RESPONSIVENESS=0.5
-RETELL_INTERRUPTION_SENSITIVITY=0.5
+VIC_TOOL_FILLER_THRESHOLD_MS=800
+VIC_MODEL_FILLER_THRESHOLD_MS=800
+VIC_MAX_FILLERS_PER_TOOL=1
+VIC_MAX_SEGMENT_EXPECTED_MS=650
+VIC_MAX_MONOLOGUE_EXPECTED_MS=12000
+VIC_MAX_REPROMPTS=2
+VIC_BARGE_IN_CANCEL_P95_MS=250
+
+############################
+# Speech pacing / markup
+############################
+SPEECH_MARKUP_MODE=DASH_PAUSE
+DASH_PAUSE_SCOPE=PROTECTED_ONLY
+DASH_PAUSE_UNIT_MS=200
+DIGIT_DASH_PAUSE_UNIT_MS=150
+PACE_MS_PER_CHAR=12
+TRANSCRIPT_MAX_UTTERANCES=200
+TRANSCRIPT_MAX_CHARS=50000
+
+############################
+# Conversation profile / persona
+############################
+CONVERSATION_PROFILE=b2b
+CLINIC_NAME=Clinic
+CLINIC_CITY=Plano
+CLINIC_STATE=Texas
+B2B_AGENT_NAME=Cassidy
+B2B_ORG_NAME=Eve
+B2B_AUTO_DISCLOSURE=false
+B2B_BUSINESS_NAME=Clinic
+B2B_CITY=Plano
+B2B_TEST_TIMESTAMP=Saturday at 6:30 PM
+B2B_EVIDENCE_TYPE=AUDIO
+B2B_EMR_SYSTEM=Zenoti, Boulevard, or MangoMint
+B2B_CONTACT_NUMBER=+14695998571
+
+############################
+# Eve v7 orchestrator
+############################
+EVE_V7_ENABLED=true
+EVE_V7_SCRIPT_PATH=orchestration/eve-v7-orchestrator.yaml
+
+############################
+# Voice quality guardrails
+############################
+VOICE_PLAIN_LANGUAGE_MODE=true
+VOICE_NO_REASONING_LEAK=true
+VOICE_JARGON_BLOCKLIST_ENABLED=true
+
+############################
+# Skills runtime (default OFF)
+############################
+SKILLS_ENABLED=false
+SKILLS_DIR=skills
+SKILLS_MAX_INJECTED=3
+
+############################
+# Shell runtime policy (default local-only; hosted OFF)
+############################
+SHELL_MODE=local
+SHELL_ENABLE_HOSTED=false
+SHELL_ALLOWED_COMMANDS=
+SHELL_TOOL_ENABLED=false
+SHELL_TOOL_CANARY_ENABLED=false
+SHELL_TOOL_CANARY_PERCENT=0
+
+############################
+# Self-improvement (default OFF)
+############################
+SELF_IMPROVE_MODE=off
+
+############################
+# Speculative planning
+############################
+SPECULATIVE_PLANNING_ENABLED=true
+SPECULATIVE_DEBOUNCE_MS=0
+SPECULATIVE_TOOL_PREFETCH_ENABLED=true
+SPECULATIVE_TOOL_PREFETCH_TIMEOUT_MS=100
 
 ############################
 # Outbound launcher / dashboard controls
@@ -109,11 +216,16 @@ RETELL_INTERRUPTION_SENSITIVITY=0.5
 LIVE_MAX_CALLS=5
 LIVE_CONCURRENCY=5
 LIVE_DISPATCH_CONTROL_FILE=data/leads/.live_dispatch_controls.json
+LIVE_CAMPAIGN_ID=ont-live-001
+LIVE_TENANT=live_medspa
 
 ############################
-# Useful repo defaults (optional but common)
+# Apify lead sourcing (optional)
 ############################
 APIFY_API_TOKEN=
 APIFY_ACTOR_ID=compass/crawler-google-places
-CONVERSATION_PROFILE=b2b
-SUPABASE_CONNECTION_STRING=
+
+############################
+# Dogfood / testing helpers
+############################
+DOGFOOD_TO_NUMBER=+15555550199
